feat(#): 1. 添加助记词+多链的hdwawllet 2. 添加了btc和solana的地址